# CopySvgTranslate

./: README.md  pyproject.toml  requirements.txt
